Add hex dependency and implement aggregation logic
- Added `hex` crate to `Cargo.toml` and `Cargo.lock`.
- Introduced `aggregator.rs` for validation and aggregation of XMSS signatures, including functions for single-key and multi-key validation.
- Updated `lib.rs` to include the new aggregator module.
- Enhanced tests for aggregation functionality, ensuring comprehensive coverage for validation scenarios.

All tests passing (total: 26). Following TDD methodology.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ cast_sign_loss = "allow"
 hashsig = { git = "https://github.com/b-wagn/hash-sig" }
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
+hex = "0.4"
 
 [dev-dependencies]
 rand = "0.9"
