--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,8 @@ hex = "0.4"
 
 [dev-dependencies]
 rand = "0.9"
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "aggregation_benchmarks"
+harness = false
