Update dependencies and restructure project configuration
- Updated `Cargo.toml` to include workspace settings and patch dependencies for `ark-ff`, `ark-ec`, `ark-serialize`, and `ark-bn254` to point to the latest branch in the `arkworks-algebra` repository.
- Added new dependencies and removed unused ones, streamlining the project structure.
- Introduced a new binary file `dory_urs_24_variables.urs` and removed the `key_aggregation.rs` example to focus on core functionalities.
- Adjusted the `Cargo.lock` to reflect the updated dependencies and ensure all tests pass.

All tests passing. Following TDD methodology.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,25 @@ name = "sig-agg"
 version = "0.1.0"
 edition = "2024"
 
+[workspace]
+members = [
+    "src/jolt",
+    "src/jolt/guest",
+]
+resolver = "2"
+
+[profile.release]
+debug = 1
+codegen-units = 1
+lto = "fat"
+
+[patch.crates-io]
+ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
+ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
+ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
+ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
+allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
+
 [lints]
 rust.missing_debug_implementations = "warn"
 rust.unreachable_pub = "warn"
