--- a/src/jolt/Cargo.toml
+++ b/src/jolt/Cargo.toml
@@ -11,3 +11,8 @@ rayon = "1.8"
 rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
+p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
+p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
+p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
+num-bigint = "0.4"
+num-traits = "0.2"
