--- a/src/jolt/Cargo.toml
+++ b/src/jolt/Cargo.toml
@@ -11,6 +11,7 @@ rayon = "1.8"
 rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
+sha2 = "0.10"
 p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
 p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
 p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
